[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Troops/MachineGun.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.2, 0.2, 2 )

[node name="MachineGun" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="MuzzlePosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.1497 )

[node name="CooldownTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
